--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,8 +1,11 @@
 <h1>Portfolio Items</h1>
 
+<%= link_to "Create New Item", new_portfolio_path %>
+
 <% @portfolio_items.each do |x| %>
 	<p><%= x.title %></p>
 	<p><%= x.subtitle %></p>
 	<p><%= x.body %></p>
 	<p><%= image_tag x.thumb_image unless x.thumb_image.nil?%></p>
+	<%= link_to "Edit", edit_portfolio_path(x.id) %>
 <% end %>
