--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -16,6 +16,14 @@
     <%= x.text_area :body %>
   </div>
 
+<ul>
+  <%= x.fields_for :technologies do |technology_form| %>
+  <li><%= technology_form.label :name %>
+    <%= technology_form.text_field :name %>
+  </li>
+  <% end %>
+</ul>
+
   <div class="actions">
     <%= x.submit %>
   </div>
