--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,30 +1,3 @@
 <h1>Create a Portfolio item</h1>
 
-<%= form_with(model: @portfolio_item, local: true) do |x| %>
-  <div class="field">
-    <%= x.label :title %>
-    <%= x.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= x.label :subtitle %>
-    <%= x.text_field :subtitle %>
-  </div>
-
-  <div class="field">
-    <%= x.label :body %>
-    <%= x.text_area :body %>
-  </div>
-
-<ul>
-  <%= x.fields_for :technologies do |technology_form| %>
-  <li><%= technology_form.label :name %>
-    <%= technology_form.text_field :name %>
-  </li>
-  <% end %>
-</ul>
-
-  <div class="actions">
-    <%= x.submit %>
-  </div>
-<% end %>
+<%= render 'form', portfolio_item: @portfolio_item %>
