--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,33 +23,31 @@
               <% end %>
 
               <div class="mb-3">
-                <%= f.label :password, class: "form-label" %> <i>(leave blank if you don't want to change it)</i><br />
+                <%= f.label :new_password, class: "form-label" %> <i>(leave blank if you don't want to change it)</i><br />
                 <%= f.password_field :password, class: "form-control", autocomplete: "new-password", placeholder: "#{@minimum_password_length} characters minimum"  %>
               </div>
 
               <div class="mb-3">
-                <%= f.label :password_confirmation, class: "form-label" %><br />
+                <%= f.label :new_password_confirmation, class: "form-label" %><br />
                 <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" %>
               </div>
 
               <div class="mb-3">
-                <%= f.label :current_password, class: "form-label" %> <i>(we need your current password to confirm your changes)</i><br />
+                <%= f.label :current_password, class: "form-label" %><br /> 
                 <%= f.password_field :current_password, class: "form-control", autocomplete: "current-password" %>
               </div>
 
               <div class="actions">
                 <%= f.submit "Update", class: "btn btn-primary" %>
+                <%= link_to "Back", :back, class: "btn btn-secondary" %> 
               </div>
-            <% end %>
-
-            <%= link_to "Back", :back %>           
+            <% end %>          
           </p>          
         </div>
         <div class="col">
           <p class="card-text">
-            <h3>Cancel my account</h3>
-
-            <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %></p>              
+            <h3>Bored of me?</h3>
+            <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %></p>
           </p>
         </div>
       </div>
