--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -29,7 +29,7 @@
 
               <div class="mb-3">
                 <%= f.label :new_password_confirmation, class: "form-label" %><br />
-                <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" %>
+                <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password", placeholder: "#{@minimum_password_length} characters minimum" %>
               </div>
 
               <div class="mb-3">
