Finished first round of devise pages styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,3 +64,14 @@ div.card {
 .form-label {
   float: left;
 }
+
+.login > .card {
+  width: 20rem;
+  float: none;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+
+.btn-margin {
+  margin-top: 10px
+}
